manifests/base/deployment.yaml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: "82225592"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: "82225592"
  template:
    metadata:
      labels:
        app: "82225592"
    spec:
      containers:
        - name: "82225592"
          image: cepgbaseacr.azurecr.io/troubleshooting:latest
          ports:
          - containerPort: 8080
